<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical"
    android:layout_marginTop="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:layout_marginTop="10dp"

            android:layout_marginBottom="20dp"
            android:text="@string/usernameHint"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/profile_profileImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"

            android:scaleType="centerCrop"
            android:src="@drawable/no_profile_pic_vector"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_username" />

        <TextView
            android:id="@+id/profile_postCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toTopOf="@+id/profile_postText"
            app:layout_constraintEnd_toEndOf="@+id/profile_postText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profile_postText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/profile_followerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toTopOf="@+id/profile_followerText"
            app:layout_constraintEnd_toEndOf="@+id/profile_followerText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profile_followerText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/profile_followingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toTopOf="@+id/profile_followingText"
            app:layout_constraintEnd_toEndOf="@+id/profile_followingText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profile_followingText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/profile_postText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_followerText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/profile_profileImageView"
            app:layout_constraintTop_toBottomOf="@+id/profile_postCount" />

        <TextView
            android:id="@+id/profile_followingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_followerText"
            app:layout_constraintTop_toBottomOf="@+id/profile_followingCount" />

        <TextView
            android:id="@+id/profile_followerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/followers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_followingText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_postText"
            app:layout_constraintTop_toBottomOf="@+id/profile_followerCount" />

        <Button
            
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"

            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>